# easycue3

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMMAND_LINE.md  Cargo.toml  FIXTURE_SYSTEM.md  INSTALL.md  MEDIA_DIRECTORY.md  PHASE4_EDITS.md  PHASE4_PLAN.md  PROJECT_OUTLINE.md  README.md  STATUS.md  VIRTUAL_INTENSITY_PLAN.md  VIRTUAL_INTENSITY_RGBAWUV_FIX.md  WORKPLAN.md  easycue3.code-workspace
.claude/: settings.json
.continue/: rules
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: AUDIO_DEVICES.md  EFFECTS.md  MAGIC_SHEET.md  RELEASE_NOTES.md  REMOTE.md  VIRTUAL_INTENSITY.md  easycue3-remote-spec.md
examples/: test_enttec_rgb.rs
fixture_profiles/: dimmer.json  irgb.json  irgba.json  irgbaw.json  irgbawuv.json  irgbawuvs.json  irgbw.json  led_par.json  moving_head.json  rgb.json  rgba.json  rgbaw.json  rgbawuv.json  rgbawuvs.json  rgbw.json
remote_client/: app.js  index.html  manifest.json  sw.js
shows/: .autosave.json  default_show.json  example_show.json  example_show2.json
src/: app.rs  command.rs  lib.rs  main.rs  paths.rs  serde_helpers.rs  update.rs
src/audio/: list.rs  mod.rs  pan_source.rs  playback.rs  player.rs  route_source.rs  types.rs
src/cue/: list.rs  mod.rs  playback.rs  types.rs
src/dmx/: mod.rs  universe.rs
src/dmx/backends/: artnet.rs  enttec_open_dmx.rs  enttec_usb_pro.rs  mod.rs  virtual_dmx.rs
src/effects/: engine.rs  mod.rs
src/fixtures/: intensity.rs  mod.rs  patching.rs  profiles.rs
src/groups/: mod.rs
src/magic_sheet/: mod.rs
src/media/: mod.rs
src/remote/: glue.rs  mod.rs  protocol.rs  server.rs
src/show/: mod.rs
src/ui/: channels.rs  chromaticity.rs  color_wheel.rs  controls.rs  cues.rs  effects.rs  fixture_editor.rs  groups.rs  lighting_cues.rs  magic_sheet.rs  mod.rs  pan_tilt_gizmo.rs  patching.rs  properties.rs  sound_cues.rs
