[package]
name = "easycue3"
version = "0.1.1"
edition = "2021"
authors = ["EasyCue3 Contributors"]
description = "A simple theatrical lighting console with integrated media playback"
license = "GPL-3.0-or-later"

[dependencies]
# UI Framework - using egui 0.31 for lumina-video compatibility
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts", "x11", "wayland", "persistence"] }
egui_dock = { version = "0.16", features = ["serde"] }  # Dockable panels with persistence
egui_extras = "0.31"  # Extra widgets including Table

# Media Playback
lumina-video = { git = "https://github.com/lumina-video/lumina-video", rev = "cb0d543", optional = true }
rodio = { version = "0.19", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DMX Output
serialport = { version = "4.5", optional = true }
artnet_protocol = "0.3"

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.14"  # Native file dialogs
image = { version = "0.25", default-features = false, features = ["png"] }  # Icon loading
dirs = "5.0"  # Platform-specific config directories
egui-phosphor = "0.9.0"

[features]
default = ["usb", "audio"]  # Enable USB DMX and audio by default
usb = ["serialport"]  # Enable USB DMX interfaces (Enttec USB Pro)
audio = ["rodio"]  # Enable audio playback (requires ALSA on Linux)
video = ["lumina-video"]  # Enable video playback (requires GStreamer on Linux)
media = ["audio", "video"]  # Enable all media features
full = ["usb", "media"]  # Enable all optional features
