[package]
name = "easycue3"
version = "0.6.1"
edition = "2021"
authors = ["EasyCue3 Contributors"]
description = "A simple theatrical lighting console with integrated audio playback"
license = "GPL-3.0-or-later"

[dependencies]
# UI Framework - using egui 0.31 for lumina-video compatibility
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts", "x11", "wayland", "persistence"] }
egui_dock = { version = "0.16", features = ["serde"] }  # Dockable panels with persistence
egui_extras = "0.31"  # Extra widgets including Table

# Media Playback
lumina-video = { git = "https://github.com/lumina-video/lumina-video", rev = "cb0d543", optional = true }
rodio = { version = "0.22", optional = true }
cpal = { version = "0.17", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DMX Output
serialport = { version = "4.5", optional = true }
artnet_protocol = "0.3"

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Remote control server (feature = "remote")
axum = { version = "0.8", features = ["ws"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"], optional = true }
mdns-sd = { version = "0.13", optional = true }
qrcode = { version = "0.14", default-features = false, optional = true }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.14"  # Native file dialogs
image = { version = "0.25", default-features = false, features = ["png"] }  # Icon loading
dirs = "5.0"  # Platform-specific config directories
egui-phosphor = "0.9.0"
ureq = "3.3.0"  # Minimal blocking HTTP client for the update check (no async runtime needed)

[features]
default = ["usb", "audio", "remote"]  # Enable USB DMX, audio, and remote control by default
usb = ["serialport"]  # Enable USB DMX interfaces (Enttec USB Pro)
audio = ["rodio", "cpal"]  # Enable audio playback (requires ALSA on Linux)
video = ["lumina-video"]  # Enable video playback (requires GStreamer on Linux)
media = ["audio", "video"]  # Enable all media features
remote = ["axum", "futures-util", "mdns-sd", "qrcode", "tokio/net", "tokio/macros"]  # Phone/browser remote control server (pure Rust, no system libs)
full = ["usb", "media", "remote"]  # Enable all optional features
